# geometry-dash-rl

./: .gitignore  Makefile  README.md  geode-mod-plan.md  pyproject.toml  requirements.txt
docs/: GEODE_HOOK_PLAN.md  GEODE_IPC_PROTOCOL.md  IMPLEMENTATION_PLAN.md
geode_mod/GDRLBridge/: mod.json
geode_mod/GDRLBridge/src/: main.cpp
geode_mod/src/: GDRLBridge.cpp
mod/: CMakeLists.txt  mod.json
mod/src/: main.cpp  object_ids.hpp  shared_memory.hpp  state_extractor.hpp
mods/: README.md
mods/ModTemplate/: mod.json
mods/ModTemplate/src/: main.cpp
mods/Telemetry/: CMakeLists.txt  mod.json
mods/Telemetry/src/: main.cpp
mods/TelemetryObstacles/: mod.json
mods/TelemetryObstacles/src/: main.cpp
mods/TrainingPipeline/: CMakeLists.txt  mod.json
mods/TrainingPipeline/src/: main.cpp
python/: action_test.py  gd_env.py  lockstep_test.py  object_viewer.py  reset_test.py  shm_reader.py
src/: README.md
src/gdrl/common/: config.py
src/gdrl/data/: README.md  collector.py  collector_cli.py  dagger_align.py  dagger_dataset.py  dagger_rollout.py  obs_dataset.py  record_human.py  render.py
src/gdrl/env/: README.md  factory.py  geode_ipc.py  geode_ipc_test.py  geode_ipc_v3.py  geode_shm_cleanup.py  geode_wait.py  live_monitor.py  mock_ipc.py  privileged_env.py  run_env_smoke.py  (+4 more)
src/geometry_dash_rl.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_distill_dataset.py  test_gym_wrapper.py  test_input_recording.py  test_mlp_agent.py  test_obs_dataset.py  test_obs_preprocess.py  test_offline_metrics.py  test_privileged_env.py  test_reset.py  test_v3_ring_buffer.py
(+18 files in other folders)
